; ModuleID = '/home/carl/AnghaBench/lab/engine/code/bspc/extr_l_math.c_ColorNormalize.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/bspc/extr_l_math.c_ColorNormalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @ColorNormalize(float* %0, float* %1) #0 {
  %3 = alloca float, align 4
  %4 = alloca float*, align 8
  %5 = alloca float*, align 8
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  store float* %0, float** %4, align 8
  store float* %1, float** %5, align 8
  %8 = load float*, float** %4, align 8
  %9 = getelementptr inbounds float, float* %8, i64 0
  %10 = load float, float* %9, align 4
  store float %10, float* %6, align 4
  %11 = load float*, float** %4, align 8
  %12 = getelementptr inbounds float, float* %11, i64 1
  %13 = load float, float* %12, align 4
  %14 = load float, float* %6, align 4
  %15 = fcmp ogt float %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load float*, float** %4, align 8
  %18 = getelementptr inbounds float, float* %17, i64 1
  %19 = load float, float* %18, align 4
  store float %19, float* %6, align 4
  br label %20

20:                                               ; preds = %16, %2
  %21 = load float*, float** %4, align 8
  %22 = getelementptr inbounds float, float* %21, i64 2
  %23 = load float, float* %22, align 4
  %24 = load float, float* %6, align 4
  %25 = fcmp ogt float %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %20
  %27 = load float*, float** %4, align 8
  %28 = getelementptr inbounds float, float* %27, i64 2
  %29 = load float, float* %28, align 4
  store float %29, float* %6, align 4
  br label %30

30:                                               ; preds = %26, %20
  %31 = load float, float* %6, align 4
  %32 = fcmp oeq float %31, 0.000000e+00
  br i1 %32, label %33, label %34

33:                                               ; preds = %30
  store float 0.000000e+00, float* %3, align 4
  br label %44

34:                                               ; preds = %30
  %35 = load float, float* %6, align 4
  %36 = fpext float %35 to double
  %37 = fdiv double 1.000000e+00, %36
  %38 = fptrunc double %37 to float
  store float %38, float* %7, align 4
  %39 = load float*, float** %4, align 8
  %40 = load float, float* %7, align 4
  %41 = load float*, float** %5, align 8
  %42 = call i32 @VectorScale(float* %39, float %40, float* %41)
  %43 = load float, float* %6, align 4
  store float %43, float* %3, align 4
  br label %44

44:                                               ; preds = %34, %33
  %45 = load float, float* %3, align 4
  ret float %45
}

declare dso_local i32 @VectorScale(float*, float, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
